// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightsCommandButton renders per snapshot with extra className combined with its own 1`] = `
<CustomizedActionButton
  className="insightsCommandButton test-extra-class-name"
  iconProps={
    Object {
      "className": "commandBarButtonIcon",
    }
  }
/>
`;

exports[`InsightsCommandButton renders per snapshot with extra icon className combined with its own 1`] = `
<CustomizedActionButton
  className="insightsCommandButton"
  iconProps={
    Object {
      "className": "commandBarButtonIcon icon-class-name",
    }
  }
/>
`;

exports[`InsightsCommandButton renders per snapshot with iconProps passed through 1`] = `
<CustomizedActionButton
  className="insightsCommandButton"
  iconProps={
    Object {
      "className": "commandBarButtonIcon",
      "testProperty": "test-value",
    }
  }
/>
`;

exports[`InsightsCommandButton renders per snapshot with props passed through 1`] = `
<CustomizedActionButton
  className="insightsCommandButton"
  iconProps={
    Object {
      "className": "commandBarButtonIcon",
    }
  }
  text="test-text"
/>
`;
